--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "demo-carousel",
-	"version": "0.1.0",
-	"description": "An interactive block with the Interactivity API..",
-	"author": "The WordPress Contributors",
+	"name": "gopublish-carousel",
+	"version": "0.2.0",
+	"description": "A carousel for blocks.",
+	"author": "Retrofitter",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
